--- a/WebContent/templates/Login.html
+++ b/WebContent/templates/Login.html
@@ -27,7 +27,7 @@ $(document).ready(function(){
     			{
     				alert("response: " + data + "\nStatus: " + status);
     			});
-    	//window.location.replace("http://localhost:5000/profile");
+    	window.location.replace("http://localhost:5000/profile");
     	
     });
     
