--- a/WebContent/views/templates/Login.hbs
+++ b/WebContent/views/templates/Login.hbs
@@ -33,13 +33,14 @@ $(document).ready(function(){
     	var Name = $(".input").val();
     	var Pass = $(".input-2").val();
     	var expected_url;
-    	var orig_url ="http://localhost:5000/profile?id="+Name;
+    	var orig_url1 ="http://localhost:5000/profile";
+    	var orig_url2 ="http://localhost:5000/completeProfile";
     	$.post("http://localhost:5000/authquery", {name : $(".input").val(), password : $(".input-2").val()},function(data,status){
     		 expected_url = "http://localhost:5000"+data;
-    		 //if(expected_url === orig_url)
+    		 if(expected_url == orig_url1 || expected_url == orig_url2)
     	     	window.location.replace("http://localhost:5000"+data);
-    	    //else
-    	    //	alert("Invalid Login, username or password Incorrect");
+    	     else
+    	    	alert("Invalid Login, username or password Incorrect");
     	});
     	
     	
