--- a/WebContent/views/templates/completeProfile.hbs
+++ b/WebContent/views/templates/completeProfile.hbs
@@ -118,6 +118,7 @@ button:hover {
     <span class="step"></span>
     <span class="step"></span>
     <span class="step"></span>
+    <span class="step"></span>
   </div>
 </form>
 
@@ -155,7 +156,7 @@ function nextPrev(n) {
   // Increase or decrease the current tab by 1:
   currentTab = currentTab + n;
   // if you have reached the end of the form...
-  if (currentTab >= x.length-1) {
+  if (currentTab >= x.length) {
     // ... the form gets submitted:
     document.getElementById("regForm").submit();    
   	return false;
